    `#remove(object)`, `#clear()`, `#removeAll(collection)`, `#retainAll(collection)`, `#removeIf(filter)`,
    `#replaceAll(operator)`. These methods update the original DOM, as well as the Elements list.
    <https://github.com/jhy/jsoup/pull/2017>

  * Improvement: when changing the OutputSettings syntax to XML, the xhtml EscapeMode is automatically set by default.

  * Bugfix: when outputting with XML syntax, HTML elements that were parsed as data nodes (<script> and <style>) should
    be emitted as CDATA nodes, so that they can be parsed correctly by an XML parser.
    <https://github.com/jhy/jsoup/pull/1720>

  * Bugfix: the Immediate Parent selector `>` could match elements above the root context element, causing incorrect
    elements to be returned when used on elements other than the root document.
    <https://github.com/jhy/jsoup/issues/2018>

  * Bugfix: in a sub-query such as `p:has(> span, > i)`, combinators following the `,` Or combinator would be
    incorrectly skipped, such that the sub-query was parsed as `i` instead of `> i`.
    <https://github.com/jhy/jsoup/issues/1707>

Release 1.16.2 [20-Oct-2023]
  * Improvement: optimized the performance of complex CSS selectors, by adding a cost-based query planner. Evaluators
    are sorted by their relative execution cost, and executed in order of lower to higher cost. This speeds the
    matching process by ensuring that simpler evaluations (such as a tag name match) are conducted prior to more
    complex evaluations (such as an attribute regex, or a deep child scan with a :has).

  * Improvement: added support for <svg> and <math> tags (and their children). This includes tag namespaces and case
    preservation on applicable tags and attributes.
    <https://github.com/jhy/jsoup/pull/2008>

  * Improvement: when converting jsoup Documents to W3C Documents in W3CDom, HTML documents will be placed in the